sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:19: error: ';' expected but identifier found.
  while((ecart>1))||(nb)
                  ^